# ERP_v2

./: .dockerignore  .editorconfig  .env  .env.example  .env.loadtest  .env.prod.example  .gitignore  .gitleaks.toml  ANALISIS_QA_README_PROFUNDO.md  ANALISIS_README_PROFUNDO.md  BITACORA.md  CHANGELOG.md  CLAUDE.md  CODEX_HANDOFF.md  INVENTARIO_ANALISIS_INICIAL.md  LICENSE  MATRIZ_PROBLEMAS_BLOQUES.md  Makefile  README.md  REPORTE_FINAL_ANALISIS_PROFUNDO.md  ROADMAP.md  compose.prod.yaml  compose.yaml  inventario_bloques_codigo.json  matriz_problemas_bloques.json  mypy.ini  package-lock.json  package.json  qa_gitleaks.json  quasar.config.ts  ruff.toml
backend/: .coveragerc  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini
backend/src/: BITACORA.md  README.md  manage.py
backend/src/config/: manage.py  (+8 more)
backend/tests/: test_2fa_challenge.py  test_access_denied_audit.py  test_acl_snapshot.py  test_acl_snapshot_scoped_permissions.py  test_audit_chain_integrity.py  test_auth.py  test_auth_throttling.py  test_axes_lockout.py  test_bootstrap_session_api.py  test_hr_method_permissions.py  test_intercompany_grants.py  test_inventory_services_coverage.py  test_me.py  test_org_context.py  test_org_endpoints_audit.py  test_pagination_list_endpoints.py  test_rbac_permission_audit.py  test_rbac_scoped_enforcement.py  test_rbac_scoped_selector.py  test_sync_engine_coverage.py  test_sync_engine_handlers_coverage.py  test_sync_engine_handlers_inventory_coverage.py  test_sync_engine_inventory_commands.py  test_sync_engine_offline.py  test_sync_engine_services_coverage.py
(+2677 files in other folders)
